...

      <View style={[styles.content, { paddingBottom: bottom + 16 }]}>
        <View style={styles.sectionGroup}>
          <Text style={styles.sectionLabel}>Configurações pessoais</Text>
          <View style={styles.menuCard}>
            <ItemActionList
              title="Meus dados"
              description="Visualize ou edite seus dados pessoais"
              onPress={() => setEditModalVisible(true)}
              icon={<UserRoundCog color={colors.primary} />}
            />

            <ItemActionList
              title="Atualizar senha"
              description="Atualize sua senha de login do aplicativo"
              onPress={() => setPasswordModalVisible(true)}
              icon={<Lock color={colors.primary} />}
            />

            <ItemActionList
...
