...
      >
        <View style={styles.card}>
          <View style={styles.logoContainer}>
            <LogoResgatar color={COLORS.muted} size={300} />
          </View>

          <Text style={styles.title}>Comunidade Resgatar</Text>

          <View style={styles.motion}>
            <View style={styles.divider} />
            <Text style={styles.motionText}>
              Doar a vida por amor a santa cruz!
            </Text>
...
